# AstroBox-NG-Module-App-ESP32S3

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml  save_image.sh  save_image_rel.sh  sdkconfig.defaults
.cargo/: config.toml
src/: allocator.rs  ancs.rs  gui.rs  main.rs  miwear.rs  statlogger.rs  touch.rs
src/gui/: app.slint  display.rs  slint_ui.rs
