[package]
name = "app_esp32s3"
version = "0.1.0"
authors = ["Searchstars <searchstars@163.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "app_esp32s3"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
codegen-units = 1
debug = true

[profile.dev.package.image]
opt-level = 0
codegen-units = 1

[profile.dev.package.resvg]
opt-level = 0
codegen-units = 1

[profile.release.package.image]
opt-level = 2
codegen-units = 1

[profile.release.package.resvg]
opt-level = 2
codegen-units = 1

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
anyhow = "1.0.99"
futures-lite = "2.6.1"
esp-idf-svc = "0.51"
esp32-nimble = "0.11.1"
mipidsi = "0.9.0"
display-interface-spi = "0.5.0"
cst816s = "1.0.1"
tokio = { version = "1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "io-util",
] }

corelib = { path = "../core" }
embedded-graphics-core = "0.4"
slint = { version = "1.14.1", default-features = false, features = [
    "std",
    "renderer-software",
    "unsafe-single-threaded",
    "compat-1-2"
] }

[build-dependencies]
embuild = "0.33"
slint-build = "1.14.1"
